[package]
name = "pki"
version = "0.1.1"
authors = ["Dmitry Pankratov <dmitry@pankratov.net>"]
description = "Public key infrastructure tools for Rust"
license = "MIT/Apache-2.0"
repository = "https://github.com/ancwrd1/pki-rs"
documentation = "https://docs.rs/pki"
readme = "README.md"
keywords = ["pki", "x509", "certificate", "tls"]
edition = "2021"

[dependencies]
openssl-sys = "0.9"
openssl = "0.10"
thiserror = "1"

[dev-dependencies]
native-tls = "0.2"
rustls = "0.20"

[features]
default = []
vendored-openssl = ["openssl/vendored"]
